adding a lot of modules

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "penguin_of_shame",
+  "name": "penguin_of_node",
   "version": "0.0.0",
   "private": true,
   "author": "Kevin Prince <nextgengames@gmail.com>",
@@ -7,18 +7,26 @@
   "dependencies": {
     "hubot": "^2.11.0",
     "hubot-diagnostics": "0.0.1",
+    "hubot-devops-reactions": "",
     "hubot-google-images": "^0.1.2",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
+    "hubot-humanity": "",
     "hubot-irc": "^0.2.7",
     "hubot-maps": "0.0.1",
+    "hubot-nationalrail": "",
     "hubot-pugme": "^0.1.0",
+    "hubot-principles": "",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "^0.1.0",
+    "hubot-seen": "",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
-    "hubot-youtube": "^0.1.2"
+    "hubot-tell": "",
+    "hubot-youtube": "^0.1.2",
+    "jsdom": "0.8.10",
+    "underscore": "1.3.3"
   },
   "engines": {
     "node": "0.10.x"
