forgot to update package.json

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hubot-rules": "^0.1.0",
     "hubot-seen": "",
     "hubot-scripts": "^2.5.16",
+    "hubot-shipping-forecast": "",
     "hubot-shipit": "^0.1.1",
     "hubot-tell": "",
     "hubot-youtube": "^0.1.2",
